Updated README and MIT-LICENSE

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,22 @@
-= MailStats
+= What is MailStats?
 
-This project rocks and uses MIT-LICENSE.
+MailStats is simple Proof of Concept gem providing simple mail statistics with a help of invisible pixel in e-mail body and replacing all links with special refering links.
+
+No viewing interfaces, just the inner logic.
+
+== Installation
+
+== Contributing to MailStats
+
+* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
+* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
+* Fork the project
+* Start a feature/bugfix branch
+* Commit and push until you are happy with your contribution
+* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
+* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+
+== Copyright
+
+Copyright (c) 2012 Max Riveiro. See MIT-LICENSE for further details.
+
